--- a/Bank_MVC_Project/Views/Home/Index.cshtml
+++ b/Bank_MVC_Project/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to GiveMoney Bank</h1>
+    <p>Please login, or register, to use our services.</p>
 </div>
