worked on bank pages, need to do more on create transaction

--- a/Bank_MVC_Project/Views/Home/Index.cshtml
+++ b/Bank_MVC_Project/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome to GiveMoney Bank</h1>
-    <p>Please login, or register, to use our services.</p>
+    <partial name="../Shared/_IndexPartial" />
 </div>
