Fixed views for transactions and messages so they show for the right users. Admin has a link for sending messages.

--- a/Bank_MVC_Project/Views/BankMessages/Index.cshtml
+++ b/Bank_MVC_Project/Views/BankMessages/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@model IEnumerable<Bank_MVC_Project.Models.BankMessage>
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var curr_user = await UserManager.GetUserAsync(User);
+    var range_size = Math.Min(5, curr_user.Messages.Count);
 }
 
 <h1>Index</h1>
@@ -19,14 +26,13 @@
             <th>
                 @Html.DisplayNameFor(model => model.Date)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.MessageReceiver)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
+    if (item.MessageReceiver.Equals(curr_user))
+    {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Message)
@@ -35,14 +41,12 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.MessageReceiver.Id)
-            </td>
-            <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
+    }
 }
     </tbody>
 </table>
