--- a/Bank_MVC_Project/Views/BankTransactions/Index.cshtml
+++ b/Bank_MVC_Project/Views/BankTransactions/Index.cshtml
@@ -1,8 +1,15 @@
 ﻿@model IEnumerable<Bank_MVC_Project.Models.BankTransaction>
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var curr_user = await UserManager.GetUserAsync(User);
+    var range_size = Math.Min(5, curr_user.Transactions.Count);
 }
 
 <h1>Index</h1>
@@ -30,8 +37,10 @@
     </thead>
     <tbody>
 @foreach (var item in Model) {
-        <tr>
-            <td>
+        if (item.ApplicationUsers.Contains(curr_user))
+        {
+            <tr>
+                <td>
                 @Html.DisplayFor(modelItem => item.Amount)
             </td>
             <td>
@@ -44,11 +53,10 @@
                 @Html.DisplayFor(modelItem => item.RecId)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
             </td>
         </tr>
+        }
 }
     </tbody>
 </table>
