--- a/Bank_MVC_Project/Views/BankMessages/Create.cshtml
+++ b/Bank_MVC_Project/Views/BankMessages/Create.cshtml
@@ -1,8 +1,18 @@
 ﻿@model Bank_MVC_Project.Models.BankMessage
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    var user = await UserManager.GetUserAsync(User);
+    var user_id = user.Id;
+
+    SelectList user_ids = ViewBag.ApplicationUserId;
+    var other_ids = user_ids.Where(user => user.Value != user_id);
 }
 
 <h1>Create</h1>
@@ -24,8 +34,13 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <!--
+                    <input type="checkbox" id="globalCheck" name="globalCheck">
+                    <label for="globalCheck">Send to all customers?</label><br />
+                -->
+
                 <label asp-for="ApplicationUserId" class="control-label"></label>
-                <select asp-for="ApplicationUserId" class ="form-control" asp-items="ViewBag.ApplicationUserId"></select>
+                <select asp-for="ApplicationUserId" class="form-control" asp-items="@other_ids"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -37,6 +52,10 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
+<script>
+
+</script>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
