--- a/Bank_MVC_Project/Views/BankTransactions/Create.cshtml
+++ b/Bank_MVC_Project/Views/BankTransactions/Create.cshtml
@@ -1,8 +1,16 @@
 ﻿@model Bank_MVC_Project.Models.BankTransaction
 
+@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
 @{
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
+
+    // will crash if not logged in, but we're not supposed to reach this page if not logged in
+    var user = await UserManager.GetUserAsync(User);
+    var user_id = user.Id;
 }
 
 <h1>Create</h1>
@@ -27,12 +35,12 @@
                 <!--
                     <label asp-for="SenderId" class="control-label"></label>
                 -->
-                <input asp-for="SenderId" class="form-control" type="hidden" />
+                <input asp-for="SenderId" class="form-control" type="hidden" value="@user_id"/>
                 <span asp-validation-for="SenderId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="RecId" class="control-label">Bank ID of the receiver</label>
-                <input asp-for="RecId" class="form-control" />
+                <input asp-for="RecId" class="form-control"/>
                 <span asp-validation-for="RecId" class="text-danger"></span>
             </div>
             <div class="form-group">
