--- a/Bank_MVC_Project/Views/BankMessages/Index.cshtml
+++ b/Bank_MVC_Project/Views/BankMessages/Index.cshtml
@@ -9,14 +9,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 
     var curr_user = await UserManager.GetUserAsync(User);
-    var range_size = Math.Min(5, curr_user.Messages.Count);
+    //var range_size = Math.Min(5, curr_user.Messages.Count);
 }
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -41,7 +38,6 @@
                 @Html.DisplayFor(modelItem => item.Date)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
