--- a/Bank_MVC_Project/Views/BankTransactions/Create.cshtml
+++ b/Bank_MVC_Project/Views/BankTransactions/Create.cshtml
@@ -32,9 +32,7 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <!--
-                    <label asp-for="SenderId" class="control-label"></label>
-                -->
+                <label asp-for="SenderId" class="control-label" style="display:none"></label>
                 <input asp-for="SenderId" class="form-control" type="hidden" value="@user_id"/>
                 <span asp-validation-for="SenderId" class="text-danger"></span>
             </div>
