--- a/Bank_MVC_Project/Views/BankMessages/Create.cshtml
+++ b/Bank_MVC_Project/Views/BankMessages/Create.cshtml
@@ -34,13 +34,13 @@
                 <span asp-validation-for="Date" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <!--
-                    <input type="checkbox" id="globalCheck" name="globalCheck">
-                    <label for="globalCheck">Send to all customers?</label><br />
-                -->
+                <input type="checkbox" id="globalCheck" name="globalCheck" onchange="SwitchIdInput()">
+                <label for="globalCheck">Send to all customers?</label><br />
+                
+                <input type="hidden" name="userId" value="@user_id" />
 
                 <label asp-for="ApplicationUserId" class="control-label"></label>
-                <select asp-for="ApplicationUserId" class="form-control" asp-items="@other_ids"></select>
+                <select asp-for="ApplicationUserId" id="selectId" class="form-control" asp-items="@other_ids"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -54,7 +54,15 @@
 </div>
 
 <script>
-
+    function SwitchIdInput(){
+        if(document.getElementById("globalCheck").checked == true){
+            document.getElementById("selectId").disabled = true;
+        }
+        else
+        {
+            document.getElementById("selectId").disabled = false;
+        }
+    }
 </script>
 
 @section Scripts {
